--- a/k8s/user-service.yaml
+++ b/k8s/user-service.yaml
@@ -13,11 +13,29 @@ spec:
       labels:
         app: user-service
     spec:
+      imagePullSecrets:
+        - name: acr-secret
       containers:
         - name: user-service
-          image: ecommerceacr.azurecr.io/user-service:v8
+          image: ecommerceacr.azurecr.io/user-service:v13
           ports:
             - containerPort: 8700
+          env:
+            - name: SPRING_DATASOURCE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: db-url
+            - name: SPRING_DATASOURCE_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: db-username
+            - name: SPRING_DATASOURCE_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: db-credentials
+                  key: db-password
 ---
 apiVersion: v1
 kind: Service
