--- a/.github/workflows/order-service-ci.yml
+++ b/.github/workflows/order-service-ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - develop
     paths:
       - 'order-service/**'
       - '.github/workflows/order-service-ci.yml'
