--- a/.github/workflows/api-gateway-ci.yml
+++ b/.github/workflows/api-gateway-ci.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+      - develop
+      - dev
     paths:
       - 'api-gateway/**'
       - '.github/workflows/api-gateway-ci.yml'
