--- a/.github/workflows/product-service-ci-cd.yml
+++ b/.github/workflows/product-service-ci-cd.yml
@@ -6,6 +6,7 @@ on:
   push:
     branches:
       - main
+      - develop
     paths:
       - 'product-service/**'
       - '.github/workflows/product-service-ci-cd.yml'
