--- a/.github/workflows/service-discovery-ci.yml
+++ b/.github/workflows/service-discovery-ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - develop
     paths:
       - 'service-discovery/**'
       - '.github/workflows/service-discovery-ci.yml'
