--- a/.github/workflows/product-service-ci-cd.yml
+++ b/.github/workflows/product-service-ci-cd.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches:
       - main
-      - develop
+      - dev
     paths:
       - 'product-service/**'
       - '.github/workflows/product-service-ci-cd.yml'
