--- a/.github/workflows/cloud-config-ci.yml
+++ b/.github/workflows/cloud-config-ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - dev
     paths:
       - 'cloud-config/**'
       - '.github/workflows/cloud-config-ci.yml'
