--- a/.github/workflows/order-service-ci.yml
+++ b/.github/workflows/order-service-ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - develop
+      - dev
     paths:
       - 'order-service/**'
       - '.github/workflows/order-service-ci.yml'
