--- a/.github/workflows/reusable-microservice-ci.yml
+++ b/.github/workflows/reusable-microservice-ci.yml
@@ -170,23 +170,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: perf-security-${{ inputs.service_name }}
-          path: performance/performance-reports/** z
-
-  perf-sec-tests:
-    needs: build_and_deploy
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Run Locust
-        run: |
-          cd performance
-          ./run-performance-tests.sh TARGET_HOST=http://<IP_o_FQDN_gateway>
-      - name: Run ZAP Baseline
-        run: |
-          docker run --rm --network host -v $PWD:/zap/wrk \
-            owasp/zap2docker-stable zap-baseline.py \
-            -t http://<IP_o_FQDN_gateway> -r zap_report.html
-      - uses: actions/upload-artifact@v4
-        with:
-          name: perf-security
-          path: performance/performance-reports
+          path: performance/performance-reports/**
