--- a/.github/workflows/reusable-microservice-ci.yml
+++ b/.github/workflows/reusable-microservice-ci.yml
@@ -159,8 +159,7 @@ jobs:
       - name: Run Locust
         run: |
           cd performance
-          chmod +x run-performance-tests.sh
-          ./run-performance-tests.sh TARGET_HOST=${{ steps.gateway.outputs.host }} USERS=200 SPAWN_RATE=20 RUNTIME=5m
+          locust -f ecommerce_load_test.py --host=${{ steps.gateway.outputs.host }} --users 200 --spawn-rate 20 --run-time 5m --headless --html locust_report.html
 
       - name: Run OWASP ZAP Baseline
         run: |
