--- a/.github/workflows/reusable-microservice-ci.yml
+++ b/.github/workflows/reusable-microservice-ci.yml
@@ -165,7 +165,7 @@ jobs:
       - name: Run Locust
         run: |
           cd performance
-          locust -f ecommerce_load_test.py --host=${{ steps.gateway.outputs.host }} --users 200 --spawn-rate 20 --run-time 5m --headless --html performance-reports/locust_report.html
+          locust -f ecommerce_load_test.py --host=${{ steps.gateway.outputs.host }} --users 200 --spawn-rate 20 --run-time 10s --headless --html performance-reports/locust_report.html
 
       - name: Run OWASP ZAP Baseline
         run: |
