--- a/.github/workflows/reusable-microservice-ci.yml
+++ b/.github/workflows/reusable-microservice-ci.yml
@@ -165,6 +165,11 @@ jobs:
           IP=$(kubectl get svc api-gateway -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
           echo "host=http://$IP:80" >> $GITHUB_OUTPUT
 
+      - name: Wait for services to be ready (Warm-up)
+        run: |
+          echo "Waiting 60 seconds for all services to start and register..."
+          sleep 60
+
       - name: Install Locust
         run: pip install locust
 
@@ -172,7 +177,7 @@ jobs:
         run: |
           cd performance
           mkdir -p performance-reports
-          locust -f ecommerce_load_test.py --host=${{ steps.gateway.outputs.host }} --users 200 --spawn-rate 20 --run-time 10s --headless --html performance-reports/locust_report.html
+          locust -f ecommerce_load_test.py --host=${{ steps.gateway.outputs.host }} --users 50 --spawn-rate 20 --run-time 10s --headless --html performance-reports/locust_report.html
 
       - name: Run OWASP ZAP Baseline
         run: |
