--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,4 +1,3 @@
-
 server:
   servlet:
     context-path: /
@@ -83,6 +82,10 @@ management:
   endpoint:
     health:
       show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: "*"
 
 eureka:
   client:
